<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="10"
    tools:context=".ResetPassActivity">

    <RelativeLayout
        android:id="@+id/banner"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2.7">

        <ImageButton
            android:id="@+id/btnBack"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="@dimen/margin_24"
            android:layout_marginTop="@dimen/margin_16"
            android:background="@android:color/transparent"
            android:contentDescription="@string/app_name"
            android:scaleType="centerInside"
            android:src="@drawable/btn_back" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:contentDescription="@string/app_name"
            android:paddingTop="@dimen/margin_28"
            android:paddingBottom="@dimen/margin_20"
            android:src="@drawable/img_logo_blue" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5.3"
        android:background="@drawable/bg_login"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/margin_16"
            android:layout_marginBottom="@dimen/margin_32"
            android:fontFamily="@font/avenir_next"
            android:gravity="center"
            android:text="@string/txt_recovery_pass"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:elevation="@dimen/margin_2"
            android:orientation="vertical"
            android:paddingStart="@dimen/margin_32"
            android:paddingTop="@dimen/margin_20"
            android:paddingEnd="@dimen/margin_32"
            android:paddingBottom="@dimen/margin_20">

            <EditText
                android:id="@+id/edTypeDocument"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginBottom="@dimen/margin_16"
                android:background="@drawable/selector_edit_text"
                android:drawableEnd="@drawable/img_next"
                android:focusable="false"
                android:fontFamily="@font/avenir_next"
                android:hint="@string/hint_type_doc"
                android:importantForAutofill="no"
                android:inputType="none|textNoSuggestions"
                android:paddingStart="@dimen/margin_12"
                android:paddingEnd="@dimen/margin_12"
                android:textSize="@dimen/txt_14" />

            <EditText
                android:id="@+id/edId"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_50"
                android:background="@drawable/bg_edit_text_none"
                android:drawableEnd="@drawable/img_id"
                android:fontFamily="@font/avenir_next"
                android:hint="@string/hint_id_number"
                android:importantForAutofill="no"
                android:inputType="numberSigned"
                android:paddingStart="@dimen/margin_12"
                android:paddingEnd="@dimen/margin_12"
                android:textSize="15sp" />

            <Button
                android:id="@+id/btnContinue"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/dimen_50"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/margin_32"
                android:background="@drawable/bg_button_clear"
                android:elevation="5dp"
                android:fontFamily="@font/giveahoot"
                android:paddingStart="@dimen/margin_32"
                android:paddingEnd="@dimen/margin_32"
                android:text="@string/btn_continue"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textSize="26sp"
                android:textStyle="bold" />

        </LinearLayout>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="bottom"
        android:layout_weight="2"
        android:gravity="bottom"
        android:orientation="vertical"
        android:padding="@dimen/margin_8">

        <include
            layout="@layout/banner_powered_by"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end" />
    </LinearLayout>


</LinearLayout>