<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_edit_text_focus"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvDirectionOriginService"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/margin_4"
        android:fontFamily="@font/giveahoot"
        android:gravity="center"
        android:maxLines="1"
        android:textColor="@color/quantum_grey"
        android:textSize="22sp"
        app:drawableStartCompat="@drawable/img_pin_start" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="@font/giveahoot"
        android:text="@string/txt_take_this_service"
        android:textColor="@color/quantum_grey"
        android:textSize="14sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/margin_4"
        android:orientation="horizontal"
        android:weightSum="2">

        <Button
            android:id="@+id/btnCloseMessage"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_8"
            android:layout_marginEnd="@dimen/margin_4"
            android:layout_weight="1"
            android:background="@drawable/bg_button_red"
            android:fontFamily="@font/giveahoot"
            android:text="@string/btn_do_not_take"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="@dimen/txt_16"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/btnOk"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_8"
            android:layout_marginStart="@dimen/margin_16"
            android:layout_marginTop="@dimen/margin_16"
            android:layout_marginEnd="@dimen/margin_16"
            android:layout_marginBottom="@dimen/margin_16"
            android:layout_weight="1"
            android:background="@drawable/bg_button_green"
            android:fontFamily="@font/giveahoot"
            android:text="@string/btn_take"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="@dimen/txt_16"
            android:textStyle="bold"
            tools:ignore="ButtonStyle" />
    </LinearLayout>
</LinearLayout>