<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_message">

    <LinearLayout
        android:id="@+id/llTitleMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_16"
        android:layout_marginTop="@dimen/margin_8"
        android:layout_marginEnd="@dimen/margin_8"
        android:layout_marginBottom="@dimen/margin_8"
        android:orientation="horizontal"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:contentDescription="@string/app_name"
            android:src="@mipmap/ic_launcher" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:gravity="center_vertical"
            android:paddingStart="@dimen/margin_8"
            android:paddingEnd="@dimen/margin_8"
            android:text="@string/app_name"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/txt_16"
            android:textStyle="bold" />

    </LinearLayout>

    <ImageView
        android:id="@+id/dialog_fingerprint_viewer_close"
        android:layout_width="@dimen/dimen_50"
        android:layout_height="@dimen/dimen_50"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:paddingEnd="@dimen/margin_8"
        android:paddingStart="@dimen/margin_8"
        android:paddingTop="0dp"
        android:paddingBottom="8dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/app_name"
        android:src="@drawable/btn_close" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_below="@id/llTitleMessage"
        android:background="@color/colorPrimaryDark" />

    <ImageView
        android:id="@+id/img_fingerprint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/llTitleMessage"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/margin_8"
        android:background="@drawable/btn_huella"
        android:contentDescription="@string/app_name" />

    <TextView
        android:id="@+id/txt_title_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/img_fingerprint"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/margin_8"
        android:gravity="center"
        android:maxLines="3"
        android:paddingStart="@dimen/margin_16"
        android:paddingEnd="@dimen/margin_16"
        android:text="@string/txt_insert_fingerprint"
        android:textColor="@color/primary_text"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/txt_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_title_message"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/margin_8"
        android:gravity="center"
        android:maxLines="3"
        android:paddingStart="@dimen/margin_16"
        android:paddingEnd="@dimen/margin_16"
        android:text="@string/txt_message_fingerprint"
        android:textColor="@color/secondary_text"
        android:textSize="18sp" />

    <Button
        android:id="@+id/btn_accept"
        style="@style/Base.Theme.AppCompat.Dialog.Alert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_message"
        android:layout_centerHorizontal="true"
        android:layout_margin="@dimen/margin_16"
        android:background="@android:color/transparent"
        android:text="@string/btn_cancel"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="20sp"
        android:textStyle="bold" />

</RelativeLayout>