<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_message">

    <LinearLayout
        android:id="@+id/llTitleMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_16"
        android:layout_marginTop="@dimen/margin_8"
        android:layout_marginEnd="@dimen/margin_8"
        android:layout_marginBottom="@dimen/margin_8"
        android:orientation="horizontal"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:contentDescription="@string/app_name"
            android:src="@mipmap/ic_launcher" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:gravity="center_vertical"
            android:paddingStart="@dimen/margin_8"
            android:paddingEnd="@dimen/margin_8"
            android:text="@string/app_name"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/txt_14"
            android:textStyle="bold" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_below="@id/llTitleMessage"
        android:background="@color/colorPrimary" />

    <TextView
        android:id="@+id/txtMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/llTitleMessage"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="@dimen/margin_24"
        android:layout_marginTop="@dimen/margin_16"
        android:layout_marginEnd="@dimen/margin_24"
        android:layout_marginBottom="@dimen/margin_8"
        android:fontFamily="@font/avenir_next"
        android:gravity="center"
        android:maxLines="30"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/txt_16" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtMessage"
        android:layout_marginVertical="@dimen/margin_4"
        android:orientation="horizontal"
        android:weightSum="2">

        <Button
            android:id="@+id/btnCloseMessage"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_16"
            android:layout_marginEnd="@dimen/margin_4"
            android:layout_weight="1"
            android:background="@drawable/bg_button_red"
            android:fontFamily="@font/avenir_next"
            android:text="@string/btn_cancel"
            android:textColor="@android:color/white"
            android:textSize="@dimen/txt_16"
            android:textStyle="bold"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/btnOk"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_16"
            android:layout_marginStart="@dimen/margin_4"
            android:layout_weight="1"
            android:background="@drawable/bg_button_green"
            android:fontFamily="@font/avenir_next"
            android:text="@string/btn_ok"
            android:textColor="@android:color/white"
            android:textSize="@dimen/txt_16"
            android:textStyle="bold"
            tools:ignore="ButtonStyle" />
    </LinearLayout>

</RelativeLayout>